<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>sniffy-parent</artifactId>
        <groupId>io.sniffy</groupId>
        <version>3.1.7-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>sniffy-core</artifactId>

    <name>Sniffy Core</name>
    <url>http://sniffy.io/</url>
    <description>Sniffy Core classes and utilities</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/</sonatypeOssDistMgmtSnapshotsUrl>
    </properties>

    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>check-signatures</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <phase>verify</phase>
                        <configuration>
                            <rules>
                                <checkSignatureRule implementation="org.codehaus.mojo.animal_sniffer.enforcer.CheckSignatureRule">
                                    <signature>
                                        <groupId>org.codehaus.mojo.signature</groupId>
                                        <artifactId>java16-sun</artifactId>
                                        <version>1.10</version>
                                    </signature>
                                    <ignores>
                                        <ignore>java.nio.channels.AsynchronousSocketChannel</ignore>
                                        <ignore>java.nio.channels.spi.AsynchronousChannelProvider</ignore>
                                        <ignore>java.nio.channels.AsynchronousSocketChannel</ignore>
                                        <ignore>java.nio.channels.AsynchronousServerSocketChannel</ignore>
                                        <ignore>java.net.SocketOption</ignore>
                                        <ignore>java.net.StandardSocketOptions</ignore>
                                        <ignore>java.nio.channels.NetworkChannel</ignore>
                                        <ignore>java.nio.channels.AsynchronousChannelGroup</ignore>
                                        <ignore>sun.misc.Unsafe</ignore>
                                        <ignore>sun.nio.ch.SocketChannelDelegate</ignore>
                                    </ignores>
                                    <checkTestClasses>false</checkTestClasses>
                                </checkSignatureRule>
                                <checkSignatureRule implementation="org.codehaus.mojo.animal_sniffer.enforcer.CheckSignatureRule">
                                    <signature>
                                        <groupId>org.codehaus.mojo.signature</groupId>
                                        <artifactId>java17</artifactId>
                                        <version>1.0</version>
                                    </signature>
                                    <ignores>
                                        <ignore>sun.nio.ch.SelChImpl</ignore>
                                        <ignore>sun.misc.Unsafe</ignore>
                                        <ignore>sun.nio.ch.SocketChannelDelegate</ignore>
                                    </ignores>
                                    <checkTestClasses>false</checkTestClasses>
                                </checkSignatureRule>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>io.sniffy</groupId>
            <artifactId>sniffy-core-compat</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
            <artifactId>concurrentlinkedhashmap-lru</artifactId>
        </dependency>
        <dependency>
            <groupId>com.eclipsesource.minimal-json</groupId>
            <artifactId>minimal-json</artifactId>
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <profiles>

        <profile>
            <id>jdk9plus</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <jdk>[1.9,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <compilerArgs>
                                <arg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                            </compilerArgs>
                            <source>1.9</source>
                            <target>1.9</target>
                            <testSource>1.9</testSource>
                            <testTarget>1.9</testTarget>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>